--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2528,7 +2528,6 @@ body {
   }
   #page {
     width: 1200px;
-    min-height: 5728px;
   }
   #u232,
   #u232-bw {
@@ -14889,26 +14888,27 @@ body {
   }
   #pamphletu35010 {
     z-index: 727;
-    width: 0.01px;
+    width: 100%;
     height: 62px;
     position: fixed;
     top: 7px;
-    left: 50%;
-    margin-left: 88px;
+    left: 0%;
+    margin-left: 0px;
   }
   #u35016 {
     position: absolute;
-    width: 400px;
+    width: 100%;
     background-color: transparent;
     top: 63px;
-    left: -288px;
+    left: 0px;
   }
   #u35016popup {
-    z-index: 728;
+      z-index: 728;
+      width: 100%;
   }
   #u35017 {
     z-index: 729;
-    width: 400px;
+    width: 100%;
     height: 410px;
     border-width: 0px;
     border-color: #999999;
@@ -16489,7 +16489,6 @@ body {
   #u2152 {
     z-index: 726;
     margin-right: -10000px;
-    margin-top: 2104px;
     left: 142px;
   }
   .css_verticalspacer .verticalspacer {
