Slim down images

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -187,7 +187,7 @@
 }
 #u183 {
   z-index: 23;
-  background: url('../images/books-164530_1280-u183-fr.png?crc=3778756712')
+  background: url('../images/books-164530_1280-u183-fr.jpg?crc=3778756712')
     no-repeat center top;
   background-size: cover;
 }
